# terminate-lib

./: .gitignore  CMakeLists.txt
example/: example.cpp
include/terminate/: asciicodes.h  clear.h  cursor.h  libinfo.h
src/: clear.cpp  clrscreen.cpp  cursor.cpp
